--- a/settings.html
+++ b/settings.html
@@ -223,7 +223,7 @@
                   <div class="sta">
                     <h3 class="blind">DATE ADDED</h3>
                     <h3 class="blind">LAST ACTIVE</h3>
-                    <h3>STATUS</h3>
+                    <h3 class="blind">STATUS</h3>
                   </div>
                 </div>
               </div>
@@ -233,7 +233,7 @@
                   <div class="tt_list">
                     <input type="checkbox" />
                     <div class="mean_">
-                      <img src="images/lap1.jpg" alt="" />
+                      <img src="images/ava3.png" alt="" />
                       <h4>
                         DALOT MAGUIRE <br />
                         <span>msodq2018@gmail.com</span>
@@ -244,7 +244,79 @@
                   <div class="dls">
                     <h3 class="blind">20 Jun 2021</h3>
                     <h3 class="blind">15 Apr 2022</h3>
-                    <h3>Owner</h3>
+                    <h3 class="blind">Owner</h3>
+                    <button class="edit_me">
+                      <img src="images/d_edit.svg" alt="" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="wrap_list grim">
+                <div class="gd">
+                  <div class="tt_list">
+                    <input type="checkbox" />
+                    <div class="mean_">
+                      <img src="images/ava1.png" alt="" />
+                      <h4>
+                        DALOT MAGUIRE <br />
+                        <span>msodq2018@gmail.com</span>
+                      </h4>
+                    </div>
+                  </div>
+
+                  <div class="dls">
+                    <h3 class="blind">20 Jun 2021</h3>
+                    <h3 class="blind">15 Apr 2022</h3>
+                    <h3 class="blind">Owner</h3>
+                    <button class="edit_me">
+                      <img src="images/d_edit.svg" alt="" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="wrap_list">
+                <div class="gd">
+                  <div class="tt_list">
+                    <input type="checkbox" />
+                    <div class="mean_">
+                      <img src="images/ava2.png" alt="" />
+                      <h4>
+                        DALOT MAGUIRE <br />
+                        <span>msodq2018@gmail.com</span>
+                      </h4>
+                    </div>
+                  </div>
+
+                  <div class="dls">
+                    <h3 class="blind">20 Jun 2021</h3>
+                    <h3 class="blind">15 Apr 2022</h3>
+                    <h3 class="blind">Owner</h3>
+                    <button class="edit_me">
+                      <img src="images/d_edit.svg" alt="" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="wrap_list grim">
+                <div class="gd">
+                  <div class="tt_list">
+                    <input type="checkbox" />
+                    <div class="mean_">
+                      <img src="images/ava4.png" alt="" />
+                      <h4>
+                        DALOT MAGUIRE <br />
+                        <span>msodq2018@gmail.com</span>
+                      </h4>
+                    </div>
+                  </div>
+
+                  <div class="dls">
+                    <h3 class="blind">20 Jun 2021</h3>
+                    <h3 class="blind">15 Apr 2022</h3>
+                    <h3 class="blind">Owner</h3>
                     <button class="edit_me">
                       <img src="images/d_edit.svg" alt="" />
                     </button>
