--- a/settings.html
+++ b/settings.html
@@ -206,7 +206,7 @@
               <h3>Admin Users</h3>
               <p>
                 Admin can add or remove accounts and manage organisation-level
-                setting
+                setting.
               </p>
 
               <button>Add User</button>
@@ -421,7 +421,24 @@
                 </p>
               </label>
               <!-- text Message -->
-              <div class="v_content">I am here as the first content</div>
+              <div class="v_content">
+                <form action="">
+                  <div class="w_bk">
+                    <div class="brick" style="max-width: 435px">
+                      <p>Sent sms verification to +2348131208276</p>
+                      <label for="text">
+                        Enter the code sent to your device:
+                        <input type="text" />
+                      </label>
+                    </div>
+                    <div class="resend">
+                      <img src="images/resend.svg" alt="Resend img" id="imgg" />
+                      Resend Code
+                    </div>
+                  </div>
+                  <button type="submit">Verify</button>
+                </form>
+              </div>
 
               <input type="radio" class="v_radio" name="verification" id="v3" />
               <label for="v3" class="v_label"
@@ -429,7 +446,27 @@
                 <p>Your will be send a code by mail.</p></label
               >
               <!-- email -->
-              <div class="v_content">I am here as the #2 nt</div>
+              <div class="v_content">
+                <form action="">
+                  <div class="w_bk">
+                    <div class="brick" style="max-width: 435px">
+                      <p>
+                        Sent code to my email at
+                        <span>msodq2018@gmail.com</span>
+                      </p>
+                      <label for="text">
+                        Enter the code sent to your device:
+                        <input type="text" />
+                      </label>
+                    </div>
+                    <div class="resend">
+                      <img src="images/resend.svg" alt="Resend img" id="imgg" />
+                      Resend Code
+                    </div>
+                  </div>
+                  <button type="submit">Verify</button>
+                </form>
+              </div>
 
               <input type="radio" class="v_radio" name="verification" id="v4" />
               <label for="v4" class="v_label"
@@ -437,7 +474,24 @@
                 <p>Yourpass will give you a call shortly.</p></label
               >
               <!-- Give me Call -->
-              <div class="v_content">I am here as the #333 nt</div>
+              <div class="v_content">
+                <form action="">
+                  <div class="w_bk">
+                    <div class="brick" style="max-width: 435px">
+                      <p>Yourpass will give you a call shortly.</p>
+                      <label for="text">
+                        Enter the code sent to your device:
+                        <input type="text" />
+                      </label>
+                    </div>
+                    <div class="resend">
+                      <img src="images/resend.svg" alt="Resend img" id="imgg" />
+                      Resend Code
+                    </div>
+                  </div>
+                  <button type="submit">Verify</button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
