--- a/settings.html
+++ b/settings.html
@@ -420,6 +420,7 @@
                   Message. You will need your phone to log in
                 </p>
               </label>
+
               <!-- text Message -->
               <div class="v_content">
                 <form action="">
@@ -451,7 +452,7 @@
                   <div class="w_bk">
                     <div class="brick" style="max-width: 435px">
                       <p>
-                        Sent code to my email at
+                        Send code to my email at
                         <span>msodq2018@gmail.com</span>
                       </p>
                       <label for="text">
