--- a/stats.html
+++ b/stats.html
@@ -170,21 +170,45 @@
           <div class="t_content">
             <div class="syntax">
               <div class="tracks">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
-                omnis
+                <h3>Users</h3>
+                <figure>1320</figure>
+                <div class="freq">
+                  <img src="images/up.svg" alt="" />
+                  <img src="images/down.svg" alt="" class="ups_down" />
+                  <p>+12.5% <span class="green">vs last week</span></p>
+                </div>
+              </div>
+              <span></span>
+
+              <div class="tracks">
+                <h3>Events</h3>
+                <figure>12</figure>
+                <div class="freq">
+                  <img src="images/up.svg" alt="" class="ups_down" />
+                  <img src="images/down.svg" alt="" />
+                  <p>-2.5% <span class="red">vs last week</span></p>
+                </div>
               </div>
               <span></span>
               <div class="tracks">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
-                omnis
+                <h3>Avg. Event Duration</h3>
+                <figure>1h 30min</figure>
+                <div class="freq">
+                  <img src="images/up.svg" alt="" class="ups_down" />
+                  <img src="images/down.svg" alt="" />
+                  <p>-2.5% <span class="red">vs last week</span></p>
+                </div>
               </div>
               <span></span>
               <div class="tracks">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
-                omnis distinctio vero aut quos sed consequuntur quaerat delectus
-                voluptatum
+                <h3>Average new user</h3>
+                <figure>3</figure>
+                <div class="freq">
+                  <img src="images/up.svg" alt="" class="ups_down" />
+                  <img src="images/down.svg" alt="" />
+                  <p>-1.5% <span class="red">vs last week</span></p>
+                </div>
               </div>
-              <span></span>
             </div>
           </div>
           <!-- ========
