--- a/stats.html
+++ b/stats.html
@@ -210,6 +210,78 @@
                 </div>
               </div>
             </div>
+
+            <!-- ============
+            TOTAL RESULT
+            =============== -->
+            <div class="t_result">
+              <h2>Total Results</h2>
+              <p>
+                Total results are actions people take after seeing and clicking
+                your events. Total result includes both Age and gender results.
+              </p>
+              <!-- ====
+              AGE
+              ========= -->
+              <div class="age">
+                <h3>Age</h3>
+                <p>Id lobortis maecenas pharetra a dui urna imperdiet ut.</p>
+                <div class="count_wrap">
+                  <div class="counts">
+                    <h5>16-20</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 30%"></div>
+                    </div>
+                  </div>
+                  <div class="counts">
+                    <h5>25-38</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 60%"></div>
+                    </div>
+                  </div>
+                  <div class="counts">
+                    <h5>39-55</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 70%"></div>
+                    </div>
+                  </div>
+                  <div class="counts">
+                    <h5>Other</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 10%"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- ====
+              GENDER
+              ========= -->
+              <div class="age">
+                <h3>Gender</h3>
+                <p>Id lobortis maecenas pharetra a dui urna imperdiet ut.</p>
+                <div class="count_wrap">
+                  <div class="counts">
+                    <h5>Male</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 30%"></div>
+                    </div>
+                  </div>
+                  <div class="counts">
+                    <h5>Female</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 80%"></div>
+                    </div>
+                  </div>
+                  <div class="counts">
+                    <h5>Other</h5>
+                    <div class="l_wrap">
+                      <div class="wrap" style="width: 10%"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <!-- ========
             WEEK
