tab and mobile responsiveness

--- a/sogasindex.html
+++ b/sogasindex.html
@@ -22,6 +22,7 @@
               <button class="login">Login</button>
             </div>
           </div>
+          <img src="assets/img/bx_bx-menu.png" alt="" class="hamburger">
         </nav>
         <section class="image">
           <a href="#"
