--- a/settings.html
+++ b/settings.html
@@ -367,7 +367,7 @@
                   <p>Chrome - <span>Active now</span></p>
                 </div>
 
-                <img src="images/close.svg" alt="" />
+                <img src="images/close.svg" id="remove_device" />
               </div>
               <hr />
               <div class="track">
@@ -376,7 +376,7 @@
                   <p>Safari - <span>Jan 4,2022</span></p>
                 </div>
 
-                <img src="images/close.svg" alt="" />
+                <img src="images/close.svg" id="remove_device" />
               </div>
               <hr />
               <div class="track">
@@ -385,7 +385,7 @@
                   <p>Mozilla - <span>Active now</span></p>
                 </div>
 
-                <img src="images/close.svg" alt="" />
+                <img src="images/close.svg" id="remove_device" />
               </div>
               <hr />
             </div>
