All Pages Updated 1 to go

--- a/settings.html
+++ b/settings.html
@@ -354,7 +354,30 @@
                   </p>
                 </div>
               </div>
-              <button>Change Password</button>
+              <div class="change_password">
+                <h3>Update Password</h3>
+
+                <form action="">
+                  <label for="">
+                    Current Password
+                    <input type="text" />
+                  </label>
+                  <label for="">
+                    New Password
+                    <input type="text" />
+                  </label>
+                  <label for="">
+                    Re-type Password
+                    <input type="text" />
+                  </label>
+
+                  <div class="sub_">
+                    <span id="pass_form">Cancel</span>
+                    <button type="submit">Update</button>
+                  </div>
+                </form>
+              </div>
+              <button class="changePassword">Change Password</button>
             </div>
             <hr />
 
