All Pages Updated 1 to go

--- a/settings.html
+++ b/settings.html
@@ -208,7 +208,74 @@
                 Admin can add or remove accounts and manage organisation-level
                 setting.
               </p>
+              <div class="edit_users">
+                <h3>Invite</h3>
+                <div class="f_edit">
+                  <div class="grab">
+                    <input type="text" placeholder="Name" />
+                    <select name="" id="">
+                      <option value="">Can View</option>
+                      <option value="">Can Edit</option>
+                      <option value="">Owner</option>
+                      <hr />
+                      <option value="">Remove</option>
+                    </select>
+                  </div>
+                  <button>Send Invite</button>
+                </div>
 
+                <p>Everyone at Company name can access this file.</p>
+
+                <div class="users_list">
+                  <div class="p_list">
+                    <div class="avalo">
+                      <img src="images/ava1.png" alt="" />
+                      <h4>Dalot Maguire(You)</h4>
+                    </div>
+                    <h5>Owner</h5>
+                  </div>
+                  <hr />
+                  <div class="p_list">
+                    <div class="avalo">
+                      <img src="images/ava1.png" alt="" />
+                      <h4>Dalot Maguire</h4>
+                    </div>
+                    <select name="" id="">
+                      <option value="">Can View</option>
+                      <option value="">Can Edit</option>
+                      <option value="">Owner</option>
+                      <hr />
+                      <option value="">Remove</option>
+                    </select>
+                  </div>
+                  <div class="p_list">
+                    <div class="avalo">
+                      <img src="images/ava3.png" alt="" />
+                      <h4>Dalot Maguire</h4>
+                    </div>
+                    <select name="" id="">
+                      <option value="">Can View</option>
+                      <option value="">Can Edit</option>
+                      <option value="">Owner</option>
+                      <hr />
+                      <option value="">Remove</option>
+                    </select>
+                  </div>
+                  <div class="p_list">
+                    <div class="avalo">
+                      <img src="images/ava4.png" alt="" />
+                      <h4>Dalot Maguire</h4>
+                    </div>
+                    <select name="" id="">
+                      <option value="">Can View</option>
+                      <option value="">Can Edit</option>
+                      <option value="">Owner</option>
+                      <hr />
+                      <option value="">Remove</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
               <button>Add User</button>
             </div>
 
