All files has been corrected

--- a/cards.html
+++ b/cards.html
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="index.html" class="current-list">
+          <a href="index.html">
             <svg
               width="28"
               height="27"
@@ -59,7 +59,7 @@
             <h3>Statistics</h3>
           </a>
 
-          <a href="adminevent.html" class="">
+          <a href="adminevent.html" class="current-list">
             <svg
               width="27"
               height="27"
@@ -103,7 +103,7 @@
             <h3>Attendee</h3>
           </a>
 
-          <a  href="settings.html" class="">
+          <a href="settings.html" class="">
             <svg
               width="27"
               height="27"
@@ -151,7 +151,6 @@
         </div>
       </div>
 
-      
       <!-- ===========
         CARD DETAILS
     ====================== -->
@@ -163,7 +162,7 @@
 
         <!-- The Details -->
         <div class="dts">
-          <a href="request_data.html"><button class="update"> Edit</button></a>
+          <a href="request_data.html"><button class="update">Edit</button></a>
           <h3>Events Overview</h3>
           <h5>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
