--- a/request_data.html
+++ b/request_data.html
@@ -27,7 +27,7 @@
             <h3>Noah Olatoye <br /><span>Admin</span></h3>
           </div>
 
-          <a href="" class="current-list">
+          <a href="">
             <svg
               width="28"
               height="27"
@@ -59,7 +59,7 @@
             <h3>Statistics</h3>
           </a>
 
-          <a href="adminevent.html" class="">
+          <a href="adminevent.html" class="current-list">
             <svg
               width="27"
               height="27"
@@ -151,46 +151,43 @@
         </div>
       </div>
 
-      
       <!-- ===========
         CARD DETAILS
     ====================== -->
       <div class="container detail_wrap rr_req">
-       <form action="cards.html">
-        <div class="back-img back_">
-          <a href="cards.html">Back</a>
-        </div>
+        <form action="cards.html">
+          <div class="back-img back_">
+            <a href="cards.html">Back</a>
+          </div>
 
-        <img src="images/card4.png" />
-        <div class="dd_entry">
-          <button type="submit" class="update_data">Update</button>
-          <label for="">
-            Event Overview
-           <textarea name="" id=""></textarea>
-          </label>
+          <img src="images/card4.png" />
+          <div class="dd_entry">
+            <button type="submit" class="update_data">Update</button>
+            <label for="">
+              Event Overview
+              <textarea name="" id=""></textarea>
+            </label>
 
-          <div class="req">
-            <label for="date">
-              Date
-              <input type="date" >
-            </label>
-            <label for="date">
-              Location
-              <input type="text" >
-            </label>
-            <label for="date">
-              Tickets
-              <input type="text" >
+            <div class="req">
+              <label for="date">
+                Date
+                <input type="date" />
+              </label>
+              <label for="date">
+                Location
+                <input type="text" />
+              </label>
+              <label for="date">
+                Tickets
+                <input type="text" />
+              </label>
+            </div>
+            <label for="description">
+              Description
+              <textarea name="Description" class="descript"></textarea>
             </label>
           </div>
-          <label for="description">
-            Description
-          <textarea name="Description" class="descript"></textarea>
-          </label>
-
-          
-        </div>
-       </form>
+        </form>
       </div>
     </section>
 
