--- a/settings.html
+++ b/settings.html
@@ -227,6 +227,7 @@
                 <p>Everyone at Company name can access this file.</p>
 
                 <div class="users_list">
+                  <img src="images/close.svg" class="close_overlay" />
                   <div class="p_list">
                     <div class="avalo">
                       <img src="images/ava1.png" alt="" />
@@ -276,7 +277,7 @@
                   </div>
                 </div>
               </div>
-              <button>Add User</button>
+              <button class="trigger_new_user">Add User</button>
             </div>
 
             <div class="tabulate">
